Page MenuHome GnuPG

Kleopatra: Kleopatra fails with error if signed data is not found
Closed, ResolvedPublic

Description

When verifying a detached signature Kleopatra and the original file does not exist Kleopatra does not ask the user to identify the file that should be verified but fails with an Input/Output error:

On Linux the behavior is different and it falls back to the old decrypt/verify dialog which offers a file selection. But for usability I think it would be best if we directly show a file selection dialog for the user to pick the file that should be verified. This would be most intuitive in my opinion.

Event Timeline

aheinecke created this task.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.

Actually, I get a very similar error message on Linux, if I run kleopatra --verify <detached signature file>

An error occurred: Kleopatra: Could not open file ".../detached-sig-with-different-name/verify-me-signatur.txt" for reading: No such file or directory (218136657)

ikloecker changed the task status from Open to Testing.Jul 7 2022, 10:28 AM
ikloecker removed ikloecker as the assignee of this task.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ikloecker added a project: Restricted Project.
ikloecker added a subscriber: ikloecker.

Fixed. This was actually a regression introduced many years ago.

Note that this was only broken in the code path used when running kleopatra --verify <file>.

I have also improved the workflow when verifying detached signatures without corresponding signed file from Kleopatras UI in "non-automatic" mode, i.e. if "Automatically start operation based on input detection for decrypt/verify." is disabled in the settings.

ikloecker renamed this task from Kleoaptra: On Windows Kleopatra fails with IO error if signed data is not found to Kleopatra: Kleopatra fails with error if signed data is not found.Jul 7 2022, 12:03 PM
werner removed a project: Restricted Project.Sep 22 2022, 10:52 AM

That comment was used to sneak in an ad. For documentation here is the comment w/o the link:
The changes made to the code have improved the workflow when verifying detached signature [redacted] without a corresponding signed file from Kleopatra's UI, which should make the process more intuitive for users. It is possible that users who experienced this issue in the past may express their satisfaction with the fix in the comments, while others may provide feedback on the usability of the updated workflow.

ebo claimed this task.
ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ebo added a subscriber: ebo.

works