Fix check if signed file corresponding to detached signature exists

This regression was introduced with the fix for detached S/MIME signature
verification many years ago.

GnuPG-bug-id: 6062